--- a/circles.html
+++ b/circles.html
@@ -5,24 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="circles.css">   
     <title>Circles Assignment</title>
 </head>
 
 <body>
+    <nav class="topbar">
+        <a class="link" href="index.html">Main</a>
+        <a class="link" href="circles.html">Circles</a>
+        <a class="link" href="animation.html">Animation</a>
+    </nav>
+
     <h1>Circles Assignment</h1>
-    <br>
-    <div class="hover">“Hover Me!”</div>
-    <div class="rotate">“Hover Me!”</div>
-    <div class="translateX">“TranslateX Me!”</div>
-    <div class="threeD">“3D”</div>
-    <div class="skew">"Skew Me!"</div>
-    <div class="translateY">“TranslateY Me!”</div>
-    <div class="scale">“Scale Me!”</div>
-
-
+    <div class="container">
+        <div class="row">
+            <div class="hover">Hover Me</div>
+            <div class="rotate">Rotate Me</div>
+            <div class="translateX">TranslateX Me</div>
+            <div class="threeD">3D</div>
+        </div>
+        <div class="row-md-4">
+            <div class="skew">Skew Me</div>
+            <div class="translateY">TranslateY Me</div>
+            <div class="scale">Scale Me</div>
+        </div>
+    </div>
 </body>
 
 </html>
