--- a/circles.html
+++ b/circles.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="circles.css">   
+    <link rel="stylesheet" type="text/css" href="circles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Circles Assignment</title>
 </head>
 
@@ -19,15 +21,30 @@
     <h1>Circles Assignment</h1>
     <div class="container">
         <div class="row">
-            <div class="hover">Hover Me</div>
-            <div class="rotate">Rotate Me</div>
-            <div class="translateX">TranslateX Me</div>
-            <div class="threeD">3D</div>
+            <div class="col-md-3">
+                <div class="hover">Hover Me</div>
+            </div>
+            <div class="col-md-3">
+                <div class="rotate">Rotate Me</div>
+            </div>
+            <div class="col-md-3">
+                <div class="translateX">TranslateX Me</div>
+            </div>
+            <div class="col-md-3">
+                <div class="threeD">3D</div>
+            </div>
         </div>
-        <div class="row-md-4">
+        <div class="row">
+        <div class="col-md-4">
             <div class="skew">Skew Me</div>
+            </div>
+            <div class="col-md-4">
             <div class="translateY">TranslateY Me</div>
+        </div>
+        <div class="col-md-4">
             <div class="scale">Scale Me</div>
+        </div>
+    </div>
         </div>
     </div>
 </body>
