--- a/circles.html
+++ b/circles.html
@@ -16,6 +16,7 @@
         <a class="link" href="index.html">Main</a>
         <a class="link" href="circles.html">Circles</a>
         <a class="link" href="animation.html">Animation</a>
+        <a class="link" href="selectors.html">Selectors</a>
     </nav>
 
     <h1>Circles Assignment</h1>
