--- a/animation.html
+++ b/animation.html
@@ -14,6 +14,7 @@
         <a class="link" href="index.html">Main</a>
         <a class="link" href="circles.html">Circles</a>
         <a class="link" href="animation.html">Animation</a>
+        <a class="link" href="selectors.html">Selectors</a>
     </nav>
     <div class="sky">
         <div class="sun">
