--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="topbar animate__animated animate__rubberBand">
         <a class="link" href="index.html">Main</a>
         <a class="link" href="circles.html">Circles</a>
-        <a class="link" href="animation.html">Animation</a>
+        <a class="link" href="selectors.html">Selectors</a>
     </nav>
 
     <h1 class="animate__animated animate__bounce"><strong>Cheetah Design on Nails</strong></h1>
