--- a/index.html
+++ b/index.html
@@ -18,11 +18,52 @@
 </head>
 
 <body>
+ 
     <nav class="topbar animate__animated animate__rubberBand">
         <a class="link" href="index.html">Main</a>
         <a class="link" href="circles.html">Circles</a>
+        <a class="link" href="animation.html">Animation</a>
         <a class="link" href="selectors.html">Selectors</a>
+        <a class="link" href="dropdown.html">Dropdown</a>
     </nav>
+    <br>
+    <br>
+    <row>
+    <div class="dropdown">
+        <button class="dropbtn">Home</button>
+        <div class="dropdown-content">
+            <a href="index.html">Task 1</a>
+            <a href="animation.html">Task 2</a>
+            <a href="selectors.html">Taks 3</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">Class Work</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="circles.html">Circles</a>
+            <a href="animation.html">Animation</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">Assigments</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="animation.html">Animation</a>
+            <a href="dropdown.html">Dropdown</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">All</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="circles.html">Circles</a>
+            <a href="animation.html">Animation</a>
+            <a href="selectors.html">Selectors</a>
+            <a href="dropdown.html">Dropdown</a>
+        </div>
+    </div>
+</row>
 
     <h1 class="animate__animated animate__bounce"><strong>Cheetah Design on Nails</strong></h1>
     <div class="container">
