--- a/selectors.html
+++ b/selectors.html
@@ -16,7 +16,46 @@
         <a class="link" href="circles.html">Circles</a>
         <a class="link" href="animation.html">Animation</a>
         <a class="link" href="selectors.html">Selectors</a>
+        <a class="link" href="dropdown.html">Dropdown</a>
     </nav>
+    <br>
+    <br>
+    <row>
+    <div class="dropdown">
+        <button class="dropbtn">Home</button>
+        <div class="dropdown-content">
+            <a href="index.html">Task 1</a>
+            <a href="animation.html">Task 2</a>
+            <a href="selectors.html">Taks 3</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">Class Work</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="circles.html">Circles</a>
+            <a href="animation.html">Animation</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">Assigments</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="animation.html">Animation</a>
+            <a href="dropdown.html">Dropdown</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">All</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="circles.html">Circles</a>
+            <a href="animation.html">Animation</a>
+            <a href="selectors.html">Selectors</a>
+            <a href="dropdown.html">Dropdown</a>
+        </div>
+    </div>
+</row>
     
         <div class="section1">
             <h1> Hello World!</h1>
